# GazeboROS2_Control

./: README.md
Gazebo/gazebo_plugin_tutorial/: CMakeLists.txt
Gazebo/gazebo_plugin_tutorial/description/: differential_robot.urdf
Gazebo/gazebo_plugin_tutorial/pluguins/: FixedJointVelocity.cpp  hello_world.cpp  model_push.cpp
Gazebo/gazebo_plugin_tutorial/worlds/: hello.world  model_joint.world  model_push.world
Gazebo/mobile_robot_examples/: package.xml  setup.cfg  setup.py
Gazebo/ros2Controllers_tutorial/: setup.py
Gazebo/ros2controllers_tutorial/: package.xml  setup.cfg  setup.py
YAHBOOM/5.Sample/: 3.test_rosmaster.ipynb  5.pwm_servo.ipynb  pwm_servo.py
ackerman_odometry/: CMakeLists.txt  package.xml
ackerman_odometry/launch/: cmd_odom.py
ackerman_odometry/src/: cmd_vel2odom_node.cpp  odom_to_tf_node.cpp
racing_bringup/: package.xml  setup.py
racing_bringup/config/: ekf_params.yaml
racing_bringup/launch/: ekf_launch.py
racing_bringup/racing_bringup/: Bicycle.py  ackerman_driver.py
rf2o_laser_odometry-humble-devel/launch/: rf2o_laser_odometry.launch.py
varios/: Bicycle.py  scaling.py  singularidades.py  velocidadAtan.py  velocidadPI.py  velocidadRaiz.py
